fix light/dark mode

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-:root {
-    --main-bg-color: #121212;
-    --main-text-color: #eee;
-    --sub-text-color: #727272;
-    --main-link-color: #24c1ff;
-}
-
 /* base */
 *,
 *:before,
@@ -19,20 +12,13 @@ body {
     font-family: 'Helvetica Neue', Helvetica, Arial,
         sans-serif;
     font-size: 14px;
-    color: #333333;
-    background-color: #fff;
     margin-top: 2.5rem;
     margin-bottom: 10rem;
 }
 
-a {
-    color: #333333;
-    text-decoration: none;
-}
-
+a,
 a:focus,
 a:hover {
-    color: #0a6ebd;
     text-decoration: none;
 }
 
@@ -45,18 +31,50 @@ p {
 
 @media (prefers-color-scheme: dark) {
     body {
-        color: var(--main-text-color);
-        background-color: var(--main-bg-color);
+        color: #eee;
+        background-color: #121212;
     }
 
     a {
-        color: var(--main-link-color);
+        color: #24c1ff;
         text-decoration: none;
     }
 
     a:focus,
     a:hover {
-        color: var(--main-link-color);
+        color: #24c1ff;
+        text-decoration: underline;
+    }
+
+    main {
+        background-color: #212121;
+    }
+
+    .post {
+        background-color: #121212;
+    }
+
+    .lds-facebook div {
+        background: #fff;
+    }
+}
+
+/* Light mode */
+
+@media (prefers-color-scheme: light) {
+    body {
+        color: #333;
+        background-color: #fff;
+    }
+
+    a {
+        color: #24c1ff;
+        text-decoration: none;
+    }
+
+    a:focus,
+    a:hover {
+        color: #24c1ff;
         text-decoration: underline;
     }
 
@@ -65,7 +83,11 @@ p {
     }
 
     .post {
-        background-color: #fff;
+        background-color: #fafafa;
+    }
+
+    .lds-facebook div {
+        background: #666;
     }
 }
 
@@ -82,7 +104,6 @@ main {
     padding: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: var(--main-bg-color);
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
@@ -135,6 +156,10 @@ body>h1 {
     margin: 0.5rem;
 }
 
+.social-links>a:hover>img {
+    transform: scale(1.1);
+}
+
 .blog-posts {
     display: flex;
     flex-direction: column;
@@ -150,9 +175,9 @@ body>h1 {
     /* make it look like a link */
     display: inline-block;
     padding: 0.5rem 1rem;
-    border: 1px solid var(--main-link-color);
+    border: 1px solid #24c1ff;
     border-radius: 0.25rem;
-    color: var(--main-link-color);
+    color: #24c1ff;
     text-decoration: none;
     font-size: 1rem;
     font-weight: bold;
@@ -160,14 +185,13 @@ body>h1 {
 }
 
 #show-more-link:hover {
-    background-color: var(--main-link-color);
+    background-color: #24c1ff;
     color: #fff;
 }
 
 .post {
     margin-bottom: 1rem;
     padding: 1rem;
-    background-color: var(--main-bg-color);
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 
@@ -182,7 +206,7 @@ body>h1 {
 
 .projects>ul>li {
     /* add border */
-    border-bottom: 1px solid var(--sub-text-color);
+    border-bottom: 1px solid #727272;
     padding: 0.5rem;
     margin: 0.5rem 0;
 
@@ -206,7 +230,6 @@ body>h1 {
     position: absolute;
     left: 8px;
     width: 16px;
-    background: #fff;
     animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 
